tests/NormalTests/paczka1/small_fuzzy/80378723.err
Error in line 4: FPLaW1 S903 98,5
Error in line 9: TcuibMl5q S527 48,39
Error in line 11: jL:UsBuFy S9:3 2:,6
Error in line 13: TcuibMl5q S903 05,9
